
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat {int st_mode; } ;


 int AF_SECURITY ;
 int SOCK_STREAM ;
 int S_ISUID ;
 int alarm (int ) ;
 scalar_t__ errno ;
 int fatal (char*) ;
 int socket (int ,int ,int) ;
 int stat (char*,struct stat*) ;
 int system (char*) ;

void do_parent(char * progname)
{
 struct stat st;
 int err;
 errno = 0;
 socket(AF_SECURITY, SOCK_STREAM, 1);
 do {
  err = stat(progname, &st);
 } while (err == 0 && (st.st_mode & S_ISUID) != S_ISUID);

 if (err == -1)
  fatal("[-] Unable to stat myself");

 alarm(0);
 system(progname);
}
